gol/static/style.css
@import url('https://fonts.googleapis.com/css?family=VT323&display=swap&subset=latin-ext');

h1, h2, h3, h4, .w3-bar-item {
    font-family: VT323, 'Courier New', Courier, monospace;
}

h5, h6 {
    font-family: 'Courier New', Courier, monospace;
    font-weight: 600;
}

body {
    margin: 0;
    padding: 0;
    color: rgb(42, 255, 42);
    background-color: rgb(16, 17, 16);
    font-family: 'Courier New', Courier, monospace;
    text-align: justify;
}

footer {
    margin-top: 10px;
}

input[type="text"], input[type="password"], textarea, select, button { 
    outline: none;
}

#width-input, #height-input {
    border: none !important;
    outline: none;
}

#console {
    background-color: rgba(255, 255, 255, 0.1);
    border-color: rgba(255, 255, 255, 0.3);
    color: rgb(42, 255, 42);
}

#load-btn {
    background-color: rgb(42, 255, 42);
    color: black;
}

#console-info {
    overflow: hidden;
    background-color: #333;
}

.CodeMirror, .CodeMirror-cursor, .CodeMirror-cursor, .CodeMirror-gutters {
    background-color: rgba(255, 255, 255, 0.1) !important;
    border-color: rgba(255, 255, 255, 0.3) !important;
    color: rgb(42, 255, 42) !important;
}

#automata {
    width: 100%;
}

.selected {
    background-color: rgb(42, 255, 42);
    color: black;
}

.v-space {
    height: 20px;
}

.v-space-large {
    height: 40px;
}

.warning {
    color: #f42420;
}

.black-background {
    background-color:black!important;
}

.dark-grey-background {
    background-color:rgb(16, 16, 16)!important;
}

.padding-8 {
    padding: 8px!important;
}

.margin-8 {
    margin: 8px!important;
}

.button {
    border:none;
    display:inline-block;
    padding:8px 16px;
    vertical-align:middle;
    overflow:hidden;
    text-decoration:none;
    color:inherit;
    background-color:black;
    text-align:center;
    cursor:pointer;
    white-space:nowrap;
    -webkit-touch-callout:none;
    -webkit-user-select:none;
    -khtml-user-select:none;
    -moz-user-select:none;
    -ms-user-select:none;
    user-select:none;
}

.button:disabled {
    cursor:not-allowed;
    opacity:0.3;
}

.w3-dropdown-hover:hover > .button:first-child, .w3-dropdown-click:hover > .button:first-child {
    background-color:#ccc;
    color:#000;
}

.w3-bar-block .w3-dropdown-hover .button, .w3-bar-block .w3-dropdown-click .button {
    width:100%;
    text-align:left;
    padding:8px 16px;
}

.w3-bar .button{
    white-space:normal;
}

.w3-dropdown-hover.w3-mobile .button, .w3-dropdown-click.w3-mobile .button {
    width:100%;
}

.button:hover {
    color:black;
    background-color:rgb(42, 255, 42);
}

/* Matrix characters */
#matrix-chars {
    width: 100vw;
    height: 99vh;
}

